# big_dict_energy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
examples/: example_pipeline.py
src/big_dict_energy/: __init__.py  lm_setup.py  parse_lm_config.py  pipeline.py  processors.py  steps.py
src/big_dict_energy/utils/: logging.py
tests/: test_pipeline.py
