[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "big_dict_energy"
version = "0.1.0"
description = "A composable language model workflow builder for DSPy with dictionary-based data storage"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Christian D'Andrea", email = "crdandre@gmail.com" }
]
dependencies = [
    "dspy==2.5.43",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "black ~= 24.4",
    "bumpver ~= 2023.1129",
    "flake8 ~= 7.1",
    "isort ~= 5.12",
    "pre-commit ~= 3.5",
]

test = [
    "pytest ~= 7.4",
]

[tool.bumpver]
current_version = "16.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
combine_as_imports = true
